--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
   },
   "homepage": "https://github.com/jeswr/construct-inferences-shacl#readme",
   "devDependencies": {
+    "@types/deindent": "^0.1.0",
     "@types/jest": "^26.0.19",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "build-logic-statement-ts": "^1.1.0",
+    "deindent": "^0.1.0",
     "eslint": "^7.17.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -56,7 +58,7 @@
     "preset": "ts-jest",
     "collectCoverage": true,
     "coverageReporters": [
-      "json-summary", 
+      "json-summary",
       "text",
       "lcov"
     ],
