--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,9 @@
       "import/prefer-default-export": "off",
       "import/no-unresolved": "off",
       "no-restricted-syntax": "off",
+      "no-unused-vars": "off",
       "import/extensions": "off",
-      "no-undef": "off"
+      "no-undef": "off",
+      "guard-for-in": "off"
   }
 }
