--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "text-camel-case": "^1.0.2",
     "ts-jest": "^26.4.4",
     "ts-morph": "^10.0.1",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "jest": {
