fix: Fix release scripts to not run build after installation

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "build:sets": "ts-node bin/generate-sets",
     "build:queries": "ts-node bin/sets-to-query",
     "build": "npm run build:sets && npm run build:queries && npm run lint:fix && tsc",
-    "prepare": "npm run build",
-    "postinstall": "npm run build",
+    "prepublishOnly": "npm run build",
     "semantic-release": "semantic-release"
   },
   "repository": {
