--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "pre-commit": "^1.2.2",
     "ramda": "^0.27.1",
     "semantic-release": "^17.3.1",
+    "shacl-test-as-object": "^1.3.0",
     "sparql-inferenced": "^1.0.1",
     "text-camel-case": "^1.0.2",
     "ts-jest": "^26.4.4",
